Add login route documentation
